# witchcraft-rust-server

./: .gitattributes  .gitignore  Cargo.toml  README.md
.circleci/: config.yml
changelog/1.2.0/: pr-48.v2.yml
changelog/2.0.0/: pr-61.v2.yml
changelog/2.1.0/: pr-54.v2.yml
changelog/2.1.1/: pr-79.v2.yml
changelog/3.0.0/: pr-77.v2.yml  pr-80.v2.yml
changelog/3.1.0/: pr-83.v2.yml
changelog/3.10.0/: pr-155.v2.yml  pr-160.v2.yml
changelog/3.2.0/: pr-84.v2.yml
changelog/3.3.0/: pr-93.v2.yml
changelog/3.6.0/: pr-124.v2.yml
changelog/3.7.0/: pr-126.v2.yml
changelog/3.8.0/: pr-125.v2.yml  pr-128.v2.yml  pr-132.v2.yml
changelog/4.0.0/: pr-184.v2.yml  pr-186.v2.yml
changelog/4.1.0/: pr-190.v2.yml
changelog/@unreleased/: pr-103.v2.yml  pr-107.v2.yml  pr-114.v2.yml  pr-120.v2.yml  pr-141.v2.yml  pr-158.v2.yml  pr-159.v2.yml  pr-176.v2.yml  pr-182.v2.yml  pr-43.v2.yml  pr-51.v2.yml  pr-52.v2.yml  pr-98.v2.yml
render-conjure/: Cargo.toml
render-conjure/src/: main.rs
witchcraft-server/: Cargo.toml
witchcraft-server-config/: Cargo.toml
witchcraft-server-config/src/: install.rs  lib.rs  runtime.rs
witchcraft-server-config/src/install/: de.rs  mod.rs
witchcraft-server-config/src/runtime/: de.rs  mod.rs
witchcraft-server-ete/: Cargo.toml  build.rs  test-ir.json  test.yml
witchcraft-server-ete/src/: async_handler.rs  audit_service.rs  handler.rs  main.rs
witchcraft-server-ete/tests/ete/: main.rs
witchcraft-server-ete/tests/ete/server/: encrypted-config-value.key  install.yml  mod.rs  runtime.yml
witchcraft-server-macros/: Cargo.toml
witchcraft-server-macros/src/: lib.rs
witchcraft-server/src/: audit.rs  body.rs  configs.rs  crash.rs  extensions.rs  lib.rs  readiness.rs  server.rs  shutdown.rs  shutdown_hooks.rs  status.rs  witchcraft.rs
witchcraft-server/src/blocking/: body.rs  cancellation.rs  conjure.rs  mod.rs
witchcraft-server/src/blocking/pool/: job_queue.rs  mod.rs
witchcraft-server/src/debug/: diagnostic_types.rs  endpoint.rs  heap_stats.rs  metric_names.rs  mod.rs  thread_dump.rs
witchcraft-server/src/endpoint/: conjure.rs  errors.rs  extended_path.rs  mod.rs
witchcraft-server/src/health/: config_reload.rs  endpoint_500s.rs  mod.rs  panics.rs  registry.rs  service_dependency.rs
witchcraft-server/src/health/api/: check_type.rs  health_check_result.rs  health_state.rs  health_status.rs  mod.rs
witchcraft-server/src/logging/: cleanup.rs  format.rs  mdc.rs  mod.rs  service.rs
witchcraft-server/src/logging/api/: annotation.rs  audit_log_v2.rs  audit_log_v3.rs  audit_producer.rs  audit_result.rs  contextualized_user.rs  diagnostic.rs  diagnostic_log_v1.rs  endpoint.rs  event_log_v1.rs  event_log_v2.rs  generic_diagnostic.rs  log_level.rs  metric_log_v1.rs  mod.rs  organization.rs  organization_id.rs  request_log.rs  request_log_v1.rs  request_log_v2.rs  sensitivity_tagged_value.rs  service_log_v1.rs  session_id.rs  span.rs  stack_frame_v1.rs  thread_dump_v1.rs  thread_info_v1.rs  token_id.rs  trace_id.rs  trace_log_v1.rs  union_event_log.rs  user_id.rs  witchcraft_envelope_v1.rs  wrapped_log_v1.rs  wrapped_log_v1_payload.rs
witchcraft-server/src/logging/logger/: async.rs  byte_buffer.rs  json.rs  metrics.rs  mod.rs  rolling_file.rs  stdout.rs  wrapping.rs
witchcraft-server/src/logging/metric/: gauge_reporter.rs  mod.rs
witchcraft-server/src/logging/trace/: ifaddrs.rs  mod.rs
witchcraft-server/src/metrics/: jemalloc.rs  mod.rs  proc.rs  rlimit.rs  rusage.rs
witchcraft-server/src/minidump/: frame_resolver.rs  log.rs  mod.rs  symbol_provider.rs
witchcraft-server/src/service/: accept.rs  audit_log.rs  cancellation.rs  catch_unwind.rs  client_certificate.rs  connection_limit.rs  connection_metrics.rs  deprecation_header.rs  endpoint_health.rs  endpoint_metrics.rs  error_log.rs  graceful_shutdown.rs  gzip.rs  handler.rs  hyper.rs  idle_connection.rs  keep_alive_header.rs  mdc.rs  mod.rs  no_caching.rs  peer_addr.rs  request_id.rs  request_log.rs  routing.rs  server_header.rs  server_metrics.rs  spans.rs  test_util.rs  tls.rs  tls_metrics.rs  trace_id_header.rs  trace_propagation.rs  unverified_jwt.rs  web_security.rs  witchcrafft_mdc.rs  witchcraft_mdc.rs
witchcraft-server/src/tls/: client_certificate.rs  mod.rs  tls_client_authentication.rs
