[workspace.package]
version = "3.10.0"

[workspace]
resolver = "2"
members = [
    "render-conjure",
    "witchcraft-server",
    "witchcraft-server-config",
    "witchcraft-server-ete",
    "witchcraft-server-macros",
]

[patch.crates-io]
conjure-codegen = { git = "https://github.com/palantir/conjure-rust" }
conjure-error = { git = "https://github.com/palantir/conjure-rust" }
conjure-http = { git = "https://github.com/palantir/conjure-rust" }
conjure-object = { git = "https://github.com/palantir/conjure-rust" }
conjure-serde = { git = "https://github.com/palantir/conjure-rust" }
conjure-runtime = { git = "https://github.com/palantir/conjure-rust-runtime", branch = "upgrades" }
conjure-runtime-config = { git = "https://github.com/palantir/conjure-rust-runtime", branch = "upgrades" }
