[workspace.package]
version = "3.10.0"

[workspace]
resolver = "2"
members = [
    "render-conjure",
    "witchcraft-server",
    "witchcraft-server-config",
    "witchcraft-server-ete",
    "witchcraft-server-macros",
]

[patch.crates-io]
refreshable = { git = "https://github.com/palantir/rust-refreshable", branch = "try-map" }
conjure-runtime = { git = "https://github.com/palantir/conjure-rust-runtime", branch = "per-host" }
conjure-runtime-config = { git = "https://github.com/palantir/conjure-rust-runtime", branch = "per-host" }
