[package]
name = "witchcraft-server-ete"
version = "1.1.0"
edition = "2021"
publish = false

[[bin]]
name = "witchcraft-server-ete"
test = false

[build-dependencies]
conjure-codegen = "2"

[dependencies]
async-trait = "0.1"
conjure-error = "2"
conjure-http = "2"
conjure-object = "2"
http = "0.2"
refreshable = "1"
tokio = "1"

witchcraft-server = { path = "../witchcraft-server" }

[dev-dependencies]
bytes = "1"
conjure-serde = "2"
hyper = "0.14"
libc = "0.2"
openssl = "0.10"
tempfile = "3"
tokio-openssl = "0.6"
