[package]
name = "witchcraft-server-ete"
version.workspace = true
edition = "2021"
publish = false

[[bin]]
name = "witchcraft-server-ete"
test = false

[build-dependencies]
conjure-codegen = "3"

[dependencies]
async-trait = "0.1"
conjure-error = "3"
conjure-http = "3"
conjure-object = "3"
http = "0.2"
refreshable = "1"
tokio = "1"

witchcraft-server = { path = "../witchcraft-server" }

[dev-dependencies]
bytes = "1"
conjure-serde = "3"
hyper = "1.3"
libc = "0.2"
openssl = "0.10"
tempfile = "3"
tokio-openssl = "0.6"
