[package]
name = "witchcraft-server-ete"
version.workspace = true
edition = "2021"
publish = false

[[bin]]
name = "witchcraft-server-ete"
test = false

[build-dependencies]
conjure-codegen = "4"

[dependencies]
async-trait = "0.1"
conjure-error = "4"
conjure-http = "4"
conjure-object = "4"
http = "1"
refreshable = "2"
tokio = "1"
witchcraft-server = { path = "../witchcraft-server" }

[dev-dependencies]
bytes = "1"
conjure-serde = "4"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
hyper = "1"
libc = "0.2"
openssl = "0.10"
tempfile = "3"
tokio-openssl = "0.6"
