[package]
name = "witchcraft-server-macros"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "Macro definitions used by witchcraft-server"
repository = "https://github.com/palantir/witchcraft-rust-server"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
conjure-error = "4"
refreshable = "2"
witchcraft-server = { version = "4.4.0", path = "../witchcraft-server" }
