[package]
name = "witchcraft-server"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "A highly opinionated embedded application server for RESTy APIs, compatible with the Witchcraft ecosystem"
repository = "https://github.com/palantir/witchcraft-rust-server"
readme = "../README.md"

[[package.metadata.sls.diagnostics]]
type = "diagnostic.types.v1"
docs = "All supported diagnostic types returnable from the server."

[[package.metadata.sls.diagnostics]]
type = "metric.names.v1"
docs = "All currently emitted metrics and their tags."

[[package.metadata.sls.diagnostics]]
type = "rust.heap.stats.v1"
docs = "Statistics about the memory allocator, in jemalloc's default text format."

[[package.metadata.sls.diagnostics]]
type = "rust.thread.dump.v1"
docs = "A recording of running threads and their respective stacktraces."

[features]
default = ["minidump", "jemalloc"]
jemalloc = ["dep:tikv-jemalloc-ctl", "dep:tikv-jemallocator"]
minidump = [
    "dep:addr2line",
    "dep:cachemap2",
    "dep:crash-handler",
    "dep:minidump",
    "dep:minidump-processor",
    "dep:minidump-unwind",
    "dep:minidump-writer",
    "dep:minidumper",
    "dep:symbolic",
]

[dependencies]
addr2line = { version = "0.20", optional = true }
arc-swap = "1"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
async-trait = "0.1"
base64 = "0.21"
bytes = "1"
cachemap2 = { version = "0.2", optional = true }
conjure-error = "3"
conjure-http = "3"
conjure-object = "3"
conjure-runtime = "4"
conjure-serde = "3"
crash-handler = { version = "0.6", optional = true }
flate2 = "1"
foreign-types = "0.5"
futures = { version = "0.3.28", features = ["executor"] }
futures-channel = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
http = "0.2"
http-body = "0.4"
http-zipkin = "0.3"
hyper = { version = "0.14", features = ["http1", "http2", "server"] }
itertools = "0.11"
lazycell = "1.0"
libc = "0.2"
log = "0.4"
minidump = { version = "0.17", optional = true }
minidump-processor = { version = "0.17", optional = true }
minidump-unwind = { version = "0.17", optional = true }
minidump-writer = { version = "0.8", optional = true }
minidumper = { version = "0.8", optional = true }
num_cpus = "1"
once_cell = "1"
parking_lot = "0.12"
pin-project = "1"
rand = "0.8"
refreshable = "1"
regex = "1"
rustls-pemfile = "1"
rustls-webpki = "0.101"
serde = "1"
serde-encrypted-value = "0.4"
serde_json = "1"
serde_yaml = "0.9"
sequence_trie = "0.3"
socket2 = "0.5"
staged-builder = "0.1.1"
subtle = "2.5"
symbolic = { version = "12", features = ["cfi", "debuginfo"], optional = true }
sync_wrapper = "0.1"
tempfile = "3.5.0"
tikv-jemalloc-ctl = { version = "0.5", features = ["use_std"], optional = true }
tikv-jemallocator = { version = "0.5", features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
    "profiling",
], optional = true }
tokio = { version = "1.27", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-rustls = "0.24"
tokio-util = "0.7"
tracing = { version = "0.1", features = ["log"] }
witchcraft-log = "3"
witchcraft-metrics = "1"
zipkin = "0.4"
witchcraft-server-config = { version = "3.8.0", path = "../witchcraft-server-config" }
witchcraft-server-macros = { version = "3.8.0", path = "../witchcraft-server-macros" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
