[package]
name = "witchcraft-server"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
description = "A highly opinionated embedded application server for RESTy APIs, compatible with the Witchcraft ecosystem"
repository = "https://github.com/palantir/witchcraft-rust-server"
readme = "../README.md"

[[package.metadata.sls.diagnostics]]
type = "diagnostic.types.v1"
docs = "All supported diagnostic types returnable from the server."

[[package.metadata.sls.diagnostics]]
type = "metric.names.v1"
docs = "All currently emitted metrics and their tags."

[[package.metadata.sls.diagnostics]]
type = "rust.heap.stats.v1"
docs = "Statistics about the memory allocator, in jemalloc's default text format."

[[package.metadata.sls.diagnostics]]
type = "rust.thread.dump.v1"
docs = "A recording of running threads and their respective stacktraces."

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemalloc-ctl", "tikv-jemallocator"]

[dependencies]
addr2line = "0.22"
arc-swap = "1"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
cachemap2 = "0.3"
conjure-error = "4.0.0-rc4"
conjure-http = "4.0.0-rc4"
conjure-object = "4.0.0-rc4"
conjure-runtime = "5.0.0-rc1"
conjure-serde = "4.0.0-rc4"
crash-handler = "0.6"
flate2 = "1"
foreign-types = "0.5"
futures = { version = "0.3.30", features = ["executor"] }
futures-channel = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"
http-zipkin = "0.4"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
itertools = "0.12"
lazycell = "1.3"
libc = "0.2"
log = "0.4"
minidump = "0.21"
minidump-processor = { version = "0.21", default-features = false }
minidump-unwind = "0.21"
minidump-writer = "0.8"
minidumper = "0.8"
num_cpus = "1"
once_cell = "1"
parking_lot = "0.12"
pin-project = "1"
rand = "0.8"
refreshable = "2"
regex = "1"
rustls-pemfile = "2"
rustls-webpki = "0.102"
serde = "1"
serde-encrypted-value = "0.4"
serde_json = "1"
serde_yaml = "0.9"
sequence_trie = "0.3"
socket2 = "0.5"
staged-builder = "0.1.2"
subtle = "2.5"
symbolic = { version = "12", features = ["cfi", "debuginfo"] }
sync_wrapper = "0.1"
tempfile = "3.10.1"
tikv-jemalloc-ctl = { version = "0.5", features = ["use_std"], optional = true }
tikv-jemallocator = { version = "0.5", features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
    "profiling",
], optional = true }
tokio = { version = "1.37", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-rustls = "0.26"
tokio-util = "0.7"
tracing = { version = "0.1", features = ["log"] }
witchcraft-log = "4.0.0-rc1"
witchcraft-metrics = "1"
zipkin = "0.4"

witchcraft-server-config = { version = "3.12.0", path = "../witchcraft-server-config" }
witchcraft-server-macros = { version = "3.12.0", path = "../witchcraft-server-macros" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
